fix: table navigation to show page was clipped

--- a/src/styles/_components.scss
+++ b/src/styles/_components.scss
@@ -315,6 +315,7 @@
         background-color: whitesmoke;
         padding-inline: 2rem;
         line-height: 2.5rem;
+        white-space: nowrap
     }
 
     .next {
